--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ PyJWT==2.9.0
 python-dotenv==1.0.1
 pytz==2024.2
 PyYAML==6.0.2
+setuptools==75.1.0
 sqlparse==0.5.1
 typing_extensions==4.12.2
 uritemplate==4.1.1
